add 1在视图里添加一个 表单 2在控制器里添加一个新的 action 处理这个表单 3在服务层添加代码，对数据库进行修改

--- a/AspNetCoreTodo/Views/Todo/Index.cshtml
+++ b/AspNetCoreTodo/Views/Todo/Index.cshtml
@@ -24,13 +24,14 @@
                     <input type="checkbox" class="done-checkbox" >
                 </td>
                 <td>@item.Title</td>
-                <td>@item.DueAt.Humanize()</td>
+                <td>@item.DueAt.Humanize().Normalize()</td>
             </tr>
         }
     </table>
 
     <div class="panel-footer add-item-form">
         <!--TODO: add item form-->
+        @await Html.PartialAsync("AddItemPartial", new TodoItem())
     </div>
 
 </div>
